# ecnet

./: LICENSE.txt  README.md  azure-pipelines.yml  cn_model_v1.0_full.csv  cn_model_v8.csv  config.yml  ecnet_data_utils.py  ecnet_driver.py  ecnet_limit_parameters.py  ecnet_model.py  ecnet_server.py  ecnet_sklearn.py  mkdocs.yml  pyproject.toml  setup.py  ysi_ls_v1_full.csv
.github/workflows/: publish_to_pypi.yml  run_tests.yml
Databases/: README.md
databases/: README.md  cn_model_v1.0.csv  cn_model_v1.0_full.csv  cp_database_v1.0.csv  cp_database_v1.1.csv  cp_model_v1.0.csv  cp_model_v1.0_full.csv  db_template.csv  filter_property.py  kv_database_v1.1.csv  kv_model_v1.0_full.csv  mon_database_v1.1.csv  pp_database_v1.0.csv  pp_database_v1.1.csv  pp_model_v1.0.csv  pp_model_v1.0_full.csv  properties_master.csv  ron_database_v1.1.csv  s_database_v1.1.csv  ysi_model_v1.0.csv  ysi_model_v2.0.csv
docs/: api_blends.md  api_callbacks.md  api_datasets.md  api_model.md  api_tasks.md  conf.py  index.md  index.rst  requirements.txt
ecnet/: ABC.py  README.md  __init__.py  abc.py  callbacks.py  data_utils.py  error_utils.py  fitness_functions.py  limit_parameters.py  model.py  server.py
examples/: README.md  abc_script.py  config.yml  create_project.py  create_static_test_set.py  example.ipynb  example_multiprop.ipynb  getting_started.ipynb  limit_db_parameters.py  limit_input_parameters.py  make_predictions.py  select_from_test_set_performance.py  tune_hyperparameters.py  use_project.py
misc/: README.md
paper/: paper.bib  paper.md
tests/: build_single_model.py  build_use_save_project.py  build_with_dropout.py  cn_model_v1.0.csv  cn_model_v2.0.csv  cn_model_v4.0.prj  config.yml  file_logging.py  limit_input_params.py  no_logging.py  test_all.bat  test_all.py  test_create_db.py  test_hyperparam_tuning.py  test_input_limit.py  test_logging.py  test_predict_with_prj.py  test_training.py  test_use_project.py  tune_hyperparameters.py
tools/: README.md  create_ecnet_db.py  name_to_smiles.py  smiles_to_qspr.py
(+121 files in other folders)
